<resources>
    <string name="app_name">达闼科技</string>
    <string name="open">Wifi</string>
    <string name="close">蓝牙</string>
    <string name="send">发送</string>

    <string name="textlogin_ip">IP</string>
    <string name="textlogin_id">用户名</string>
    <string name="textlogin_password">密码</string>
    <string name="rememberpassword">记住密码</string>
    <string name="autologin">自动登录</string>
    <string name="text_loginbutton">登  录</string>

</resources>
