<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">



    <ImageView
        android:id="@+id/login_avatar"
        android:layout_width="88dp"
        android:layout_height="88dp"
        android:src="@drawable/area_bg"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"/>

    <EditText
        android:id="@+id/login_ip"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="48dp"
        android:paddingLeft="8dp"
        android:visibility="gone"
        android:hint="@string/textlogin_ip"/>

    <EditText
        android:id="@+id/login_id"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:hint="@string/textlogin_id"/>
    <EditText
        android:id="@+id/login_password"
        android:layout_width="320dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:paddingLeft="8dp"
        android:hint="@string/textlogin_password"/>

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp">

        <CheckBox
            android:id="@+id/login_rememberpassword"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:text="@string/rememberpassword"/>
        <CheckBox
            android:id="@+id/login_autologin"
            android:layout_width="100dp"
            android:layout_height="32dp"
            android:text="@string/autologin"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <Button
        android:id="@+id/login_button"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape"
        android:text="@string/text_loginbutton"
        android:textSize="20dp" />


</LinearLayout>